--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Hello Bangladesh</h2>
-    <h2>Hello Bangladesh</h2>
-    <h2>Hello Bangladesh</h2>
-    <h2>Hello jpakislaksdjf</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere commodi quo rerum incidunt doloremque vel in aliquid distinctio, dicta ducimus natus aut reiciendis quod modi nesciunt adipisci? Reiciendis corporis fugit culpa eligendi, atque cum rerum autem odit, vitae amet hic.</p>
+    <h1>Hello bangladesh</h1>
+    <p>Look Mammah , i can push to github.</p>
 </body>
 </html>
